@@ -1,3 +1,15 @@
+2010-12-19  Benjamin Poulain  <benjamin.poulain@nokia.com>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] [WK2] Client are expected to render their own background for WebPages
+        https://bugs.webkit.org/show_bug.cgi?id=51296
+
+        Do not render a white background before rendering the page with DrawingAreaProxy.
+
+        * UIProcess/API/qt/qwkpage.cpp:
+        (QWKPagePrivate::paint):
+
 2010-12-17  Darin Adler  <darin@apple.com>
 
         Reviewed by Dan Bernstein.
